# llm_translator

./: .gitignore  pyproject.toml
docs/: dev_doc.md
src/llm_translator/: __init__.py  translator.py
src/llm_translator/cli/: main.py
src/llm_translator/controllers/: translator.py
src/llm_translator/features/translator/controllers/: graph.py
