[project]
name = "llm-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "underfirst", email = "a.k.a.underfirst@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.3.26",
  "langchain-openai>=0.3.25",
  "langgraph>=0.4.8",
  "loguru>=0.7.3",
  "typer>=0.15.2",
]

[project.scripts]
llmt = "llm_translator.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "aider>=0.2.6",
  "fabric>=3.2.2",
  "ipython>=9.0.2",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
]
